hphp/test/zend/bad/ext/gd/tests/colormatch.php
<?php

$im = imagecreatetruecolor(5,5);
$im2 = imagecreate(5,5);

imagecolormatch($im, $im2);

echo "ok\n";

imagedestroy($im);
?>